using resources class path